[metadata]
name = SprintReport
version = 0.1
description = A CLI to write a sprint report in Markdown
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/canonical/foundations-sandbox
project_urls =
    Bug Reports = https://github.com/canonical/foundations-sandbox
    Source Code = https://github.com/canonical/foundations-sandbox
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:

[options.extras_require]
test =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    sprint-report = SprintReport.sprint_report:main

[tool:pytest]
addopts = --cov
testpaths = tests

[coverage:run]
source = SprintReport
branch = true

[coverage:report]
show_missing = true
exclude_lines =
    raise NotImplementedError
    assert False
